@startuml


skinparam linetype ortho
hide empty members

skinparam class {
	ArrowColor SteelBlue
	BorderColor Dimgray
	HeaderBackgroundColor SteelBlue
	BackgroundColor White
	FontName Calibri bold
	AttributeFontColor #333
	AttributeFontName Calibri
	AttributeFontSize 13
	FontColor Ivory
	FontSize 15
}


hide empty members



class HouseGridCTRL{

-HouseGridService HouseGridService
-RoomService roomService


+findRooms()

}

class HouseGridService{

- HouseGridRepository HouseGridRepository

+gridExists()
+findById()

}

Interface HouseGridRepository {

+findById()
+existsById()

}

class RoomService{

-RoomRepository roomRepository
-RoomMapper mapper

+findRoomsByHouseGrid()


}

Interface RoomRepository{

+findAllByHouseGrid()

}

class ResponseEntity{

+ResponseEntity()
}






HouseGridCTRL --> HouseGridService

HouseGridCTRL --> RoomService

HouseGridService --> HouseGridRepository

RoomService --> RoomRepository

HouseGridCTRL -> ResponseEntity



@enduml